# MLOPS_PROJECT

./: .gitignore  LICENSE  README.md  demo.py  main.py  projectflow.txt  pyproject.toml  requirements.txt  template.py
notebook/: exp-notebook.ipynb  test_con.ipynb
src/mlops_project/components/: data_ingestion.py
src/mlops_project/configuration/: mongo_db_connection.py
src/mlops_project/constants/: __init__.py
src/mlops_project/data_access/: mlops_proj_data.py
src/mlops_project/entity/: artifact_entity.py  config_entity.py
src/mlops_project/exception/: __init__.py
src/mlops_project/logger/: __init__.py
src/mlops_project/pipeline/: training_pipeline.py
src/mlops_project/utils/: env_loader.py  mongo_utils.py
tests/Exception/: test_myexception.py
tests/MONGO/: test_create_mongo_uri.py
tests/logger/: test_1_logger_instance.py  test_logger.py
