[project]
name = "mlops-project"
version = "0.1.0"
description = "Production-grade MLOps project"
readme = "README.md"
requires-python = ">=3.13"

# Only runtime dependencies
dependencies = [
    "anyio>=4.0",
    "boto3>=1.41",
    "fastapi>=0.121",
    "from-root>=1.3.0",
    "h11>=0.16",
    "imbalanced-learn>=0.14",
    "jinja2>=3.1",
    "jmespath>=1.0",
    "joblib>=1.5",
    "numpy>=2.3",
    "pandas>=2.3",
    "pillow>=12.0",
    "plotly>=6.5",
    "pydantic>=2.12",
    "pymongo>=4.15",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
    "scikit-learn>=1.7",
    "scipy>=1.16",
    "seaborn>=0.13",
    "starlette>=0.50",
    "uvicorn>=0.38",
]

[dependency-groups]

# Development, debugging, Jupyter, plotting, linting, types
dev = [
    "annotated-doc==0.0.4",
    "annotated-types>=0.7",
    "asttokens>=3.0",
    "certifi>=2025.0",
    "click>=8.3",
    "colorama>=0.4",
    "comm>=0.2",
    "contourpy>=1.3",
    "cycler>=0.12",
    "debugpy>=1.8",
    "decorator>=5.2",
    "dnspython>=2.8",
    "executing>=2.2",
    "fonttools>=4.60",
    "idna>=3.11",
    "ipykernel>=7.1",
    "ipython>=9.7",
    "ipython-pygments-lexers>=1.1",
    "jedi>=0.19",
    "jupyter-client>=8.6",
    "jupyter-core>=5.9",
    "kiwisolver>=1.4",
    "markupsafe>=3.0",
    "matplotlib>=3.10",
    "matplotlib-inline>=0.2",
    "mypy-boto3-s3>=1.41.1",
    "narwhals>=2.12",
    "nest-asyncio>=1.6",
    "packaging>=25.0",
    "parso>=0.8",
    "platformdirs>=4.5",
    "prompt-toolkit>=3.0",
    "psutil>=7.1",
    "pure-eval>=0.2",
    "pygments>=2.19",
    "pyparsing>=3.2",
    "pytz>=2025.1",
    "pyzmq>=27.1",
    "s3transfer>=0.15",
    "six>=1.17",
    "sniffio>=1.3",
    "stack-data>=0.6",
    "threadpoolctl>=3.6",
    "tornado>=6.5",
    "traitlets>=5.14",
    "typing-extensions>=4.15",
    "typing-inspection>=0.4",
    "tzdata>=2025.1",
    "urllib3>=2.5",
    "wcwidth>=0.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]
